--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                             <span>Send</span>
                         </div>
                         <div class="col-3">
-                            <div class="card">
-                                <i class="bi bi-credit-card-2-back"></i>
+                            <div class="cards">
+                                <i class="bi bi-credit-card"></i>
                             </div>
                             <span>Card</span>
                         </div>
