--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bank_apps</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -87,14 +88,196 @@
            </div>
         </div>
     </section>
+    <section class="income-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="min-dis imcome">
+                        <span>Income</span>
+                        <h3>$ 552.95</h3>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="min-dis expe">
+                        <span>Expenses</span>
+                        <h3>$ 86.45</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="min-dis bills">
+                        <span>Total Bills</span>
+                        <h3>$ 53.25</h3>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="min-dis save">
+                        <span>Savings</span>
+                        <h3>$ 120.99</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="transactions-section">
+        <div class="container">
+            <div class="section-title">
+                <h2>Transactions</h2>
+                <a href="#">View All</a>
+            </div>
+            <div class="row">
+                <div class="col col-md-6 col-lg-4">
+                    <div class="tarans-item">
+                        <div class="taras-content">
+                            <img src="img/amazon.jpg" alt="amazon">
+                            <div>
+                                <h3>Amazom</h3>
+                                <span>Shopping</span>
+                            </div>
+                        </div>
+                        <span class="decrement-value">-$ 150</span>
+                    </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                    <div class="tarans-item">
+                        <div class="taras-content">
+                            <img src="img/apple.jpg" alt="apple">
+                            <div>
+                                <h3>Apple</h3>
+                                <span>Appstore Purchase</span>
+                            </div>
+                        </div>
+                        <span class="decrement-value">-$ 29</span>
+                    </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                    <div class="tarans-item">
+                        <div class="taras-content">
+                            <img src="img/avatar3.jpg" alt="author">
+                            <div>
+                                <h3>Alex Ljung</h3>
+                                <span>Transfer</span>
+                            </div>
+                        </div>
+                        <span>+$ 1,000</span>
+                    </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                    <div class="tarans-item">
+                        <div class="taras-content">
+                            <img src="img/avatar4.jpg" alt="author">
+                            <div>
+                                <h3>Beatriz Brito</h3>
+                                <span>Transfer</span>
+                            </div>
+                        </div>
+                        <span>-$ 186</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cards-section">
+        <div class="container">
+            <div class="section-title">
+                <h2>My Cards</h2>
+                <a href="#">View All</a>
+            </div>
+            <div class="slider-wrap">
+                <div class="card-item card-1">
+                    <div class="card-contents">
+                        <div class="card-balance">
+                            <span>BALANCE</span>
+                            <h1>$ 1,256,90</h1>
+                        </div>
+                        <div class="card-number">
+                            <span>CARD NUMBER</span>
+                            <h2>
+                                <i class="bi bi-three-dots"></i>2456
+                            </h2>
+                        </div>
+                        <div class="card-date">
+                            <div class="expiry-date">
+                                <span>EXPORY</span>
+                                <h3>12/25</h3>
+                            </div>
+                            <div class="ccv">
+                                <span>CCV</span>
+                                <h3>553</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-more">
+                        <i class="bi bi-three-dots"></i>
+                    </div>
+                </div>
+                <div class="card-item card-2">
+                    <div class="card-contents">
+                        <div class="card-balance">
+                            <span>BALANCE</span>
+                            <h1>$ 1,256,90</h1>
+                        </div>
+                        <div class="card-number">
+                            <span>CARD NUMBER</span>
+                            <h2>
+                                <i class="bi bi-three-dots"></i>2456
+                            </h2>
+                        </div>
+                        <div class="card-date">
+                            <div class="expiry-date">
+                                <span>EXPORY</span>
+                                <h3>12/25</h3>
+                            </div>
+                            <div class="ccv">
+                                <span>CCV</span>
+                                <h3>553</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-more">
+                        <i class="bi bi-three-dots"></i>
+                    </div>
+                </div>
+                <div class="card-item card-3">
+                    <div class="card-contents">
+                        <div class="card-balance">
+                            <span>BALANCE</span>
+                            <h1>$ 1,256,90</h1>
+                        </div>
+                        <div class="card-number">
+                            <span>CARD NUMBER</span>
+                            <h2>
+                                <i class="bi bi-three-dots"></i>2456
+                            </h2>
+                        </div>
+                        <div class="card-date">
+                            <div class="expiry-date">
+                                <span>EXPORY</span>
+                                <h3>12/25</h3>
+                            </div>
+                            <div class="ccv">
+                                <span>CCV</span>
+                                <h3>553</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-more">
+                        <i class="bi bi-three-dots"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
 
 
-
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
