--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <nav>
+    <nav class="fixed-top">
         <div class="container">
             <div class="row">
                 <div class="col-4">
