--- a/index.html
+++ b/index.html
@@ -290,43 +290,67 @@
         <div class="container-fluid">
             
             <div class="row author-slider-wrap">
-                <div class="col-3 ml-3 p-0">
+                <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
                         <img src="img/avatar9.jpg" alt="auuthor">
                         <span>Shahriyar</span>
                     </div>
                 </div>
-                <div class="col-3 ml-3 p-0">
+                <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
                         <img src="img/avatar8.jpg" alt="auuthor">
                         <span>Arifen</span>
                     </div>
                 </div>
-                <div class="col-3 ml-3 p-0">
+                <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
                         <img src="img/avatar7.jpg" alt="auuthor">
                         <span>Ruma</span>
                     </div>
                 </div>
-                <div class="col-3 ml-3 p-0">
+                <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
                         <img src="img/avatar4.jpg" alt="auuthor">
                         <span>Jakiya</span>
                     </div>
                 </div>
-                <div class="col-3 ml-3 p-0">
+                <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
                         <img src="img/avatar3.jpg" alt="auuthor">
                         <span>Nazma</span>
                     </div>
                 </div>
-                <div class="col-3 ml-3 p-0">
+                <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
                         <img src="img/avatar2.jpg" alt="auuthor">
                         <span>Sokina</span>
                     </div>
                 </div>
-                <div class="col-3 ml-3 p-0">
+                <div class="col-3 col-md-2 ml-3 p-0">
+                    <div class="author">
+                        <img src="img/avatar10.jpg" alt="auuthor">
+                        <span>Jorina</span>
+                    </div>
+                </div>
+                <div class="col-3 col-md-2 ml-3 p-0">
+                    <div class="author">
+                        <img src="img/avatar4.jpg" alt="auuthor">
+                        <span>Jakiya</span>
+                    </div>
+                </div>
+                <div class="col-3 col-md-2 ml-3 p-0">
+                    <div class="author">
+                        <img src="img/avatar3.jpg" alt="auuthor">
+                        <span>Nazma</span>
+                    </div>
+                </div>
+                <div class="col-3 col-md-2 ml-3 p-0">
+                    <div class="author">
+                        <img src="img/avatar2.jpg" alt="auuthor">
+                        <span>Sokina</span>
+                    </div>
+                </div>
+                <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
                         <img src="img/avatar10.jpg" alt="auuthor">
                         <span>Jorina</span>
@@ -345,7 +369,7 @@
                 </div>
             </div>
             <div class="row bill-card-wrap">
-                <div class="col-6">
+                <div class="col-6 col-md-4">
                     <div class="bill-card">
                         <img src="img/amazon.jpg" alt="amazon">
                         <h2>$ 95</h2>
@@ -356,7 +380,7 @@
                         <button>PAY NOW</button>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4">
                     <div class="bill-card">
                         <img src="img/apple.jpg" alt="apple">
                         <h2>$ 140</h2>
@@ -367,7 +391,7 @@
                         <button>PAY NOW</button>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4">
                     <div class="bill-card">
                         <img src="img/amazon.jpg" alt="amazon">
                         <h2>$ 95</h2>
@@ -378,7 +402,29 @@
                         <button>PAY NOW</button>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-md-4">
+                    <div class="bill-card">
+                        <img src="img/apple.jpg" alt="apple">
+                        <h2>$ 140</h2>
+                        <ul>
+                            <li>Music Monthly</li>
+                            <li>Subscription</li>
+                        </ul>
+                        <button>PAY NOW</button>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4">
+                    <div class="bill-card">
+                        <img src="img/amazon.jpg" alt="amazon">
+                        <h2>$ 95</h2>
+                        <ul>
+                            <li>Cradit Card</li>
+                            <li>Statement</li>
+                        </ul>
+                        <button>PAY NOW</button>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4">
                     <div class="bill-card">
                         <img src="img/apple.jpg" alt="apple">
                         <h2>$ 140</h2>
@@ -463,20 +509,28 @@
                 </div>
             </div>
             <div class="row news-card-warp">
-                <div class="col-6 news-card">
+                <div class="col-6 col-md-4 news-card">
                     <img src="img/a.jpg" alt="author">
                     <p>Lorem ipsum dolor sit amet consectetur.</p>
                 </div>
-                <div class="col-6 news-card">
+                <div class="col-6 col-md-4 news-card">
                     <img src="img/b.jpg" alt="author">
                     <p>Lorem ipsum dolor sit amet consectetur.</p>
                 </div>
-                <div class="col-6 news-card">
+                <div class="col-6 col-md-4 news-card">
                     <img src="img/c.jpg" alt="author">
                     <p>Lorem ipsum dolor sit amet consectetur.</p>
                 </div>
-                <div class="col-6 news-card">
+                <div class="col-6 col-md-4 news-card">
                     <img src="img/d.jpg" alt="author">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <div class="col-6 col-md-4 news-card">
+                    <img src="img/b.jpg" alt="author">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <div class="col-6 col-md-4 news-card">
+                    <img src="img/c.jpg" alt="author">
                     <p>Lorem ipsum dolor sit amet consectetur.</p>
                 </div>
             </div>
