--- a/index.html
+++ b/index.html
@@ -180,6 +180,30 @@
                         <span>-$ 186</span>
                     </div>
                 </div>
+                <div class="col col-md-6 col-lg-4">
+                    <div class="tarans-item">
+                        <div class="taras-content">
+                            <img src="img/amazon.jpg" alt="amazon">
+                            <div>
+                                <h3>Amazom</h3>
+                                <span>Shopping</span>
+                            </div>
+                        </div>
+                        <span class="decrement-value">-$ 150</span>
+                    </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                    <div class="tarans-item">
+                        <div class="taras-content">
+                            <img src="img/apple.jpg" alt="apple">
+                            <div>
+                                <h3>Apple</h3>
+                                <span>Appstore Purchase</span>
+                            </div>
+                        </div>
+                        <span class="decrement-value">-$ 29</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
