--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     </footer>
 
 
-    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+    <div class="side-manu-wrap offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
         
         <div class="manu-page offcanvas-body">
             <div class="manu-left">
@@ -776,6 +776,23 @@
         </div>
         <!-- offcanvas-body end -->
     </div>
+
+    <section class="login-section">
+        <div class="login-wrap">
+            <div class="login-body">
+                <form>
+                    <p class="m-0">Admin : 4321</p>
+                    <p>Password : 4321</p>
+                    <input id="admin" type="number">
+                    <input id="password" type="number">
+                    <br>
+                    <button id="loginBtn">Login</button>
+
+
+                </form>
+            </div>
+        </div>
+    </section>
 
     
 
