--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                                 <i class="bi bi-chevron-right"></i>
                             </div>
                         </div>
-                        <div class="manu-list-item">
+                        <div id="logOut" class="manu-list-item">
                             <div class="manu-list-item-left">
                                 <div class="icon">
                                     <i class="bi bi-box-arrow-right"></i>
@@ -780,7 +780,7 @@
         <!-- offcanvas-body end -->
     </div>
 
-    <section class="login-section">
+    <section class="login-section p-0">
         <div class="login-wrap">
             <div class="login-body">
                 <form>
