--- a/index.html
+++ b/index.html
@@ -1019,9 +1019,9 @@
     </section>
 
 
-
+<!-- 
     <section class="login-section p-0">
-        <div class="#login-wrap">
+        <div class="login-wrap">
             <div class="login-body">
                 <form>
                     <p class="m-0">Admin : 4321</p>
@@ -1035,7 +1035,7 @@
                 </form>
             </div>
         </div>
-    </section>
+    </section> -->
 
     
 
