--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
         <!-- offcanvas-body end -->
     </div>
 
-    <section class="notifi">
+    <section class="notifi p-0">
         <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
             <div class="offcanvas-header">
                     <div class="container p-0">
