profile panel add

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <span>6</span>
                         </div>
                         <div class="profile-icon">
-                            <img src="img/01.png" alt="jakiya">
+                            <img data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="img/01.png" alt="jakiya">
                             <span>4</span>
                         </div>
                     
@@ -787,7 +787,7 @@
                     <div class="container p-0">
                         <div class="header-content">
                             <div class="top-left">
-                                <a class="btn-close text-reset p-0" data-bs-dismiss="offcanvas" aria-label="Close">
+                                <a class="text-reset p-0" data-bs-dismiss="offcanvas" aria-label="Close">
                                     <i class="bi bi-chevron-left"></i></i>
                                 </a>
                             </div>
@@ -1016,6 +1016,119 @@
                 </div>
             </div>
           </div>
+    </section>
+
+    <section class="profile-panel p-0">
+
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <div class="container p-0">
+                <div class="header-content">
+                    <div class="top-left">
+                        <a class="text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
+                            <i class="bi bi-chevron-left"></i></i>
+                        </a>
+                    </div>
+                    <div class="top-title">
+                        <h2>Settings</h2>
+                    </div>
+                    <div class="top-right">
+                        <a href="#"><i class="bi bi-bell"></i></a>
+                    </div>
+                </div>   
+            </div>
+        </div>
+        <div class="offcanvas-body">
+            <div class="container">
+                <div class="profile-box-wrap">
+                    <div class="profile-img">
+                        <img src="img/avatar7.jpg" alt="author">
+                    </div>
+                    <div class="upload-profil">
+                        <i class="bi bi-camera"></i>
+                    </div>
+                </div>
+                <div class="accounts-box-wrap">
+                    <h3>Account</h3>
+                    <!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">Jannat Akter</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar4.jpg" alt="author">
+                        </div>
+                    </div>
+                    <!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">Mariya</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar2.jpg" alt="author">
+                        </div>
+                    </div><!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">Muna</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar7.jpg" alt="author">
+                        </div>
+                    </div><!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">Eva Akter</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar10.jpg" alt="author">
+                        </div>
+                    </div><!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">MH Meraj</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar2.jpg" alt="author">
+                        </div>
+                    </div><!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">MH Jibon</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar3.jpg" alt="author">
+                        </div>
+                    </div><!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">Afsana Akter</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar4.jpg" alt="author">
+                        </div>
+                    </div><!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">Rifa Tasnim</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar8.jpg" alt="author">
+                        </div>
+                    </div><!-- account-1 -->
+                    <div class="account-single-item">
+                        <div class="aco-person">
+                            <h2 class="m-0">Nazma Akter</h2>
+                        </div>
+                        <div class="aco-person-img">
+                            <img src="img/avatar9.jpg" alt="author">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        </div>
     </section>
 
 
