--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Bank_apps</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -39,7 +38,7 @@
                             <span>6</span>
                         </div>
                         <div class="profile-icon">
-                            <img data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="img/01.png" alt="jakiya">
+                            <img data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="img/avatar7.jpg" alt="jakiya">
                             <span>4</span>
                         </div>
                     
@@ -580,9 +579,9 @@
                 <div class="container">
                     <div class="manu-top">
                         <div class="manu-top-left">
-                            <img src="img/01.png" alt="jakiya">
+                            <img src="img/avatar7.jpg" alt="jakiya">
                             <div>
-                                <h2>Jakiya Sultana</h2>
+                                <h2>Beatriz Brito</h2>
                                 <p>60628532</p>
                             </div>
                         </div>
