connect balance showing display

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <span>6</span>
                         </div>
                         <div class="profile-icon">
-                            <img class="logedProfileImg" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="img/avatar7.jpg" alt="jakiya">
+                            <img class="logedProfileImg" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="img/person/0.png" alt="jakiya">
                             <span>4</span>
                         </div>
                     
@@ -579,10 +579,10 @@
                 <div class="container">
                     <div class="manu-top">
                         <div class="manu-top-left">
-                            <img class="logedProfileImg" src="img/avatar7.jpg" alt="jakiya">
+                            <img class="logedProfileImg" src="img/person/0.png" alt="jakiya">
                             <div>
-                                <h2 class="logedProfileName">Beatriz Brito</h2>
-                                <p id="logedProfileNumber">60628532</p>
+                                <h2 class="logedProfileName">Arifen Emon</h2>
+                                <p id="logedProfileNumber">8801760628532</p>
                             </div>
                         </div>
                         <button id="x-btn" data-bs-dismiss="offcanvas" aria-label="Close">
