--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
            <div class="balance-wrap">
                 <div class="total-dilplay-card">
                     <div class="total-display-blance">
-                        <p>Total Amount</p>
-                        <h1 id="totalAmount">$ 00.00</h1>
+                        <p>Live Amount</p>
+                        <h1 id="liveAmount">$ 00.00</h1>
                     </div>
                     <div>
                         <button class="add-blance-btn">
@@ -112,14 +112,14 @@
             <div class="row">
                 <div class="col-6">
                     <div class="min-dis bills">
-                        <span>Present Balance</span>
-                        <h3 class="logedPresentBalance">$ 00.0</h3>
+                        <span>Loan</span>
+                        <h3 id="loanBalance">$ 00.0</h3>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="min-dis save">
-                        <span>Total Balance</span>
-                        <h3 id="logedoTalBalance">$ 00.0</h3>
+                        <span>Total Debt</span>
+                        <h3 class="totalDebt">$ 00.0</h3>
                     </div>
                 </div>
             </div>
@@ -596,8 +596,8 @@
                         
                             <div class="manu-dilplay-card">
                                 <div class="total-display-blance">
-                                    <p>Balance</p>
-                                    <h1 class="logedPresentBalance">$ 00.00</h1>
+                                    <p>Total Debt</p>
+                                    <h1 class="totalDebt">$ 00.00</h1>
                                 </div>
                             </div>
                             <div class="manu-display-option">
