--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank_apps</title>
+    <title>Nine_Ster</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    
+<body ontouchmove='refresh(event)'>
+    <div id="ref"></div>
     <nav class="fixed-top">
         <div class="container">
             <div class="row">
@@ -319,7 +319,7 @@
             <div class="row author-slider-wrap">
                 <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
-                        <img src="img/avatar9.jpg" alt="auuthor">
+                        <img src="img/person/0.png" alt="auuthor">
                         <span>Shahriyar</span>
                     </div>
                 </div>
@@ -355,7 +355,7 @@
                 </div>
                 <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
-                        <img src="img/avatar10.jpg" alt="auuthor">
+                        <img src="img/person/1.png" alt="auuthor">
                         <span>Jorina</span>
                     </div>
                 </div>
@@ -379,7 +379,7 @@
                 </div>
                 <div class="col-3 col-md-2 ml-3 p-0">
                     <div class="author">
-                        <img src="img/avatar10.jpg" alt="auuthor">
+                        <img src="img/person/1.png" alt="auuthor">
                         <span>Jorina</span>
                     </div>
                 </div>
