--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             </button>
                             <span>6</span>
                         </div>
-                        <div class="profile-icon">
+                        <div id="asSdfgh" class="profile-icon">
                             <img class="logedProfileImg" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="img/person/0.png" alt="jakiya">
                             <span>4</span>
                         </div>
@@ -134,80 +134,7 @@
                 </div>
             </div>
             
-            <div class="row">
-                <div class="col col-md-6 col-lg-4">
-                    <div class="tarans-item">
-                        <div class="taras-content">
-                            <img src="img/person/1.png" alt="amazon">
-                            <div>
-                                <h3>Amazom</h3>
-                                <span>Shopping</span>
-                            </div>
-                        </div>
-                        <span class="decrement-value">-$ 150</span>
-                    </div>
-                </div>
-                <div class="col col-md-6 col-lg-4">
-                    <div class="tarans-item">
-                        <div class="taras-content">
-                            <img src="img/person/2.png" alt="apple">
-                            <div>
-                                <h3>Apple</h3>
-                                <span>Appstore Purchase</span>
-                            </div>
-                        </div>
-                        <span class="decrement-value">-$ 29</span>
-                    </div>
-                </div>
-                <div class="col col-md-6 col-lg-4">
-                    <div class="tarans-item">
-                        <div class="taras-content">
-                            <img src="img/person/1.png" alt="author">
-                            <div>
-                                <h3>Alex Ljung</h3>
-                                <span>Transfer</span>
-                            </div>
-                        </div>
-                        <span>+$ 1,000</span>
-                    </div>
-                </div>
-                <div class="col col-md-6 col-lg-4">
-                    <div class="tarans-item">
-                        <div class="taras-content">
-                            <img src="img/person/3.png" alt="author">
-                            <div>
-                                <h3>Beatriz Brito</h3>
-                                <span>Transfer</span>
-                            </div>
-                        </div>
-                        <span>-$ 186</span>
-                    </div>
-                </div>
-                <div class="col col-md-6 col-lg-4">
-                    <div class="tarans-item">
-                        <div class="taras-content">
-                            <img src="img/person/1.png" alt="amazon">
-                            <div>
-                                <h3>Amazom</h3>
-                                <span>Shopping</span>
-                            </div>
-                        </div>
-                        <span class="decrement-value">-$ 150</span>
-                    </div>
-                </div>
-                <div class="col col-md-6 col-lg-4">
-                    <div class="tarans-item">
-                        <div class="taras-content">
-                            <img src="img/person/2.png" alt="apple">
-                            <div>
-                                <h3>Apple</h3>
-                                <span>Appstore Purchase</span>
-                            </div>
-                        </div>
-                        <span class="decrement-value">-$ 29</span>
-                    </div>
-                </div>
-            </div>
+            <div id="ghghgh" class="row"></div>
         </div>
     </section>
 
@@ -535,32 +462,7 @@
                     <a href="#">View All</a>
                 </div>
             </div>
-            <div class="row news-card-warp">
-                <div class="col-6 col-md-4 news-card">
-                    <img src="img/person/0.png" alt="author">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
-                </div>
-                <div class="col-6 col-md-4 news-card">
-                    <img src="img/person/1.png" alt="author">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
-                </div>
-                <div class="col-6 col-md-4 news-card">
-                    <img src="img/person/2.png" alt="author">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
-                </div>
-                <div class="col-6 col-md-4 news-card">
-                    <img src="img/person/3.png" alt="author">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
-                </div>
-                <div class="col-6 col-md-4 news-card">
-                    <img src="img/person/4.png" alt="author">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
-                </div>
-                <div class="col-6 col-md-4 news-card">
-                    <img src="img/person/5.png" alt="author">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
-                </div>
-            </div>
+            <div id="klklkl" class="row news-card-warp"></div><!-- this div link to json API -->
         </div>
     </section>
     <footer>
