creat element by js

--- a/index.html
+++ b/index.html
@@ -243,74 +243,8 @@
         </div>
         <div class="container-fluid">
             
-            <div class="row author-slider-wrap">
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/0.png" alt="auuthor">
-                        <span>Shahriyar</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/5.png" alt="auuthor">
-                        <span>Arifen</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/4.png" alt="auuthor">
-                        <span>Ruma</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/3.png" alt="auuthor">
-                        <span>Jakiya</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/1.png" alt="auuthor">
-                        <span>Nazma</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/0.png" alt="auuthor">
-                        <span>Sokina</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/1.png" alt="auuthor">
-                        <span>Jorina</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/3.png" alt="auuthor">
-                        <span>Jakiya</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/1.png" alt="auuthor">
-                        <span>Nazma</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/0.png" alt="auuthor">
-                        <span>Sokina</span>
-                    </div>
-                </div>
-                <div class="col-3 col-md-2 ml-3 p-0">
-                    <div class="author">
-                        <img src="https://raw.githubusercontent.com/arifenEmon/appsIMGs/main/person/1.png" alt="auuthor">
-                        <span>Jorina</span>
-                    </div>
-                </div>
-            </div>
+            <div id="cvbfhg" class="row author-slider-wrap"></div>
+            
         </div>
     </section>
 
